--- a/style/account.css
+++ b/style/account.css
@@ -876,7 +876,7 @@ a.chrWalletLink {
 	display: block;
 	width: 100%; height: 33.33%;
 	background-position: bottom left;
-	background-size: 160%;
+	background-size: 158%;
 }
 .spzLineBackground {
 	display: block;
@@ -914,6 +914,7 @@ a.chrWalletLink {
 	display: inline-block;
 	width: 80px; height: 80px;
 	margin-top: 6px;
+	margin-left: -16px;
 	vertical-align: middle;
 	background-image: url("../img/account/equipment/spec_icon.png");
 	background-size: 100%;
@@ -929,6 +930,25 @@ a.chrWalletLink {
 		0px -1px 2px #000,
 		1px 0px 2px #000,
 		-1px 0px 2px #000;
+}
+.spzMajorName {
+	display: block;
+	position: absolute;
+	width: 64px;
+	margin-left: -18px;
+	line-height: normal;
+	font-family: Menomonia;
+	font-size: 12px;
+	color: #ffcc77;
+	text-shadow:
+		0px 1px 2px #000,
+		0px -1px 2px #000,
+		1px 0px 2px #000,
+		-1px 0px 2px #000;
+	pointer-events: none;
+}
+.spzColumn:hover .spzMajorName {
+	display: none;
 }
 .spzColumn { /* Vertical containers for trait icons */
 	display: inline-block;
