--- a/gw2t.css
+++ b/gw2t.css
@@ -210,7 +210,7 @@ img {
 /*
  * Style for qTip tooltip JS plugin by Craig Erskine.
  */
-#qTip {
+#qTip, .qTip {
 	display: none;
 	position: absolute; z-index: 1000;
 	max-width: 720px;
@@ -223,12 +223,15 @@ img {
 	font-weight: bold;
 	line-height: 110%;
 	color: #eee;
-	background: url("img/background/tooltip.png");
+	background-image: url("img/background/tooltip.png");
 	background-size: cover;
 	text-shadow: 0px 0px 2px black;
 	box-shadow: 0px 0px 2px #555;
 	opacity: 1;
 	pointer-events: none;
+}
+.qTip {
+	display: block !important;
 }
 #qTip dfn { /* Highlight color for emphasis text in tooltip */
 	background: none;
