--- a/style/account.css
+++ b/style/account.css
@@ -989,6 +989,16 @@ a.chrWalletLink {
 	line-height: 18px;
 	color: white;
 }
+.trtTooltipExtra {
+	width: 380px;
+	position: absolute;
+	margin-left: -8px;
+	padding: 4px 6px 4px 6px;
+	border: 2px solid #111;
+	border-radius: 2px;
+	background-image: url("../img/background/tooltip.png");
+	background-size: cover;
+}
 .trtTooltipBorder { /* A rectangle element that superimposes over the tooltip's borders */
 	display: block;
 	position: absolute;
@@ -1028,15 +1038,10 @@ a.chrWalletLink {
 .trtFactIcons {
 	display: block;
 	margin-right: 1px;
-}
-.trtFactPrefixIcons {
-	display: block;
-	min-width: 76px; /* Fits two icons */
-	background: red;
+	white-space: nowrap;
 }
 .trtFactIcon {
-	display: block;
-	float: left;
+	display: inline-block;
 	width: 38px; height: 38px;
 }
 .trtFactText {
