--- a/style/account.css
+++ b/style/account.css
@@ -29,14 +29,9 @@
 	display: none;
 	width: 100%; height: 100%;
 }
-.accDish .cntComposition {
+#accContent .cntComposition {
 	font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
-}
-.accDish:before { /* Padding for the menu bar up top */
-	content: "";
-	display: block;
-	padding-top: 32px;
 }
 #accModal { /* Container of HTML to be written in the console as messages */
 	display: none;
@@ -1218,6 +1213,10 @@ a.chrWalletLink {
 	margin-top: 32px;
 	margin-bottom: 32px;
 	text-align: center;
+}
+.ivtBankPrice {
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 18px;
 }
 .ivtBank {
 	display: inline-block;
