--- a/style/account.css
+++ b/style/account.css
@@ -66,7 +66,7 @@
 	border-bottom: 1px solid #444;
 	border-bottom-right-radius: 8px;
 }
-.accMenu {
+.accMenuTab {
 	display: inline-block;
 	padding-left: 6px;
 	padding-right: 6px;
@@ -79,23 +79,23 @@
 	background-repeat: repeat-x;
 	border-right: 3px solid #444;
 }
-.accMenu:hover {
+.accMenuTab:hover {
 	background-image: linear-gradient(to top, #7c7253 0%, transparent 100%);
 	animation: aniHighlight 0.4s;
 }
-.accMenu img {
+.accMenuTab img {
 	margin-right: 2px;
 }
-.accMenuFocused {
+.accMenuTabFocused {
 	border-left: 3px solid rgba(228,224,179,0.6);
 	border-right: 1px solid rgba(228,224,179,0.6);
 	background-image: linear-gradient(to top, #7c7253 0%, transparent 100%);
 }
-.accMenuSubbutton:hover, .accMenuButtonFocused {
+.accMenuIcon:hover, .accMenuButtonFocused {
 	border-radius: 50%;
 	box-shadow: 0px 0px 10px #e7e3bd;
 }
-.accMenuSubbutton:active {
+.accMenuIcon:active {
 	opacity: 0.6;
 }
 
@@ -107,6 +107,24 @@
 	display: block;
 	width: 0%; height: 1px;
 	background: linear-gradient(to right, #000 0%, #eadf86 100%);
+}
+#accProgressCount {
+	position: absolute;
+	margin-top: 16px;
+	padding: 4px 6px 4px 6px;
+	right: 12px;
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 17px;
+	color: #ffeeaa;
+	text-shadow:
+		0px 1px 1px #000,
+		0px -1px 1px #000,
+		1px 0px 1px #000,
+		-1px 0px 1px #000;
+	opacity: 0.8;
+	box-shadow: 0px 0px 32px #0b0d0e;
+	border-top-right-radius: 8px;
+	border-bottom-left-radius: 8px;
 }
 
 /* Dish Menu
